--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # Core
-numpy>=1.24
-pandas>=2.2
+numpy>=1.26,<2
+pandas>=2.2.3
 
 # For truncated normal in generate_purchases()
-scipy>=1.10
+scipy>=1.13
 
 # Plotting (used in data exploration notebook)
-matplotlib>=3.8
+matplotlib>=3.9
 seaborn>=0.13
 
 # Jupyter
